--- a/trbstn/static/css/style.css
+++ b/trbstn/static/css/style.css
@@ -2066,8 +2066,8 @@ body {
   border: 0.1875rem solid #fff;
   border-top: none;
   border-right: none;
-  -webkit-animation: rotating 2s linear infinite;
-          animation: rotating 2s linear infinite;
+  -webkit-animation: rotating 1s linear infinite;
+          animation: rotating 1s linear infinite;
 }
 
 @-webkit-keyframes rotating {
@@ -2865,6 +2865,7 @@ body {
         -ms-flex-pack: center;
             justify-content: center;
     padding: 0;
+    padding-bottom: 3rem;
   }
 }
 
@@ -2983,7 +2984,7 @@ body {
     font-size: 2.25rem;
   }
   .t-main__decor {
-    height: 112.5%;
+    height: 83%;
   }
   .t-use__article .t-use__text {
     width: -webkit-calc(100% - 20rem);
@@ -3004,11 +3005,29 @@ body {
   .t-video__container .t-video__player {
     height: 32.375rem;
   }
+  [data-aos^=fade][data-aos^=fade] {
+    opacity: 1;
+  }
+  [data-aos^=fade] {
+    -webkit-transform: translate(0);
+        -ms-transform: translate(0);
+            transform: translate(0);
+  }
+  [data-aos^=fade][data-aos^=fade].aos-animate {
+    -webkit-transform: translate(0);
+        -ms-transform: translate(0);
+            transform: translate(0);
+  }
+  [data-aos^=fade][data-aos^=fade].t-video__container {
+    -webkit-transform: translateX(-32%);
+        -ms-transform: translateX(-32%);
+            transform: translateX(-32%);
+  }
 }
 
 @media only screen and (max-width: 700px) {
   .t-main__decor {
-    height: 111.9%;
+    height: 83.5%;
   }
   .t-menu__nav {
     padding-right: 6rem;
@@ -3026,21 +3045,55 @@ body {
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
-    height: 75%;
     margin-top: 0;
   }
+  .t-header__presentation.active {
+    height: 100%;
+    margin-top: 0;
+  }
+  .t-header__presentation.active .t-header__medicine {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: -9.375rem;
+    padding-top: 0;
+  }
+  .t-header__cta {
+    padding-top: 1rem;
+  }
   .t-header__cta span {
-    font-size: 3.75rem;
+    font-size: 3rem;
+    padding-right: 4rem;
+  }
+  .t-header__cta a {
+    margin-top: 1rem;
+  }
+  .t-header__medicine {
+    -webkit-box-ordinal-group: 2;
+    -webkit-order: 1;
+        -ms-flex-order: 1;
+            order: 1;
+    padding-top: 0;
   }
   .t-medicine__inner {
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     z-index: 1;
+    margin-left: -2.175rem;
   }
   .t-header::after {
     width: 100%;
   }
   .t-main__decor {
     width: 100%;
-    height: 115.5%;
+    height: 87%;
   }
   .t-video__container {
     height: 28.75rem;
@@ -3053,41 +3106,70 @@ body {
 @media only screen and (max-width: 630px) {
   .t-main__decor {
     width: 100%;
-    height: 115%;
+    height: 88%;
   }
 }
 
 @media only screen and (max-width: 600px) {
+  .t-header {
+    min-height: 55rem;
+  }
+  .t-header__presentation {
+    margin-top: 2rem;
+  }
+  .t-medicine__inner {
+    width: 27rem;
+    height: 23.75rem;
+  }
   .t-main__decor {
-    height: 114.5%;
+    height: 88%;
   }
 }
 
 @media only screen and (max-width: 576px) {
+  .t-container {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
   .t-header {
     min-height: 55rem;
   }
   .t-main__decor {
     height: 100%;
   }
+  .t-header__presentation {
+    margin-top: 0;
+  }
   .t-header__medicine {
-    -webkit-box-pack: start;
-    -webkit-justify-content: flex-start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin: 0;
     padding: 0;
+    -webkit-box-ordinal-group: 2;
+    -webkit-order: 1;
+        -ms-flex-order: 1;
+            order: 1;
   }
   .t-medicine__inner {
-    width: 100%;
-    height: 80vw;
+    top: 1.25rem;
+    width: 90%;
+    height: 65vw;
     margin: 0;
   }
   .t-header__cta {
     padding: 0;
   }
+  .t-header__cta span {
+    font-size: 2.5rem;
+    padding-right: 4rem;
+  }
+  .t-header__cta a {
+    margin-top: 2rem;
+  }
   .t-main__use {
-    padding: 3.5rem 0 1.5rem 0;
+    padding: 2.5rem 0 1.5rem 0;
   }
   .t-use__article {
     -webkit-box-orient: vertical;
@@ -3097,6 +3179,7 @@ body {
             flex-direction: column;
   }
   .t-use__article .t-use__illustration {
+    display: none;
     width: 100%;
     height: 130vw;
     -webkit-box-ordinal-group: 0;
@@ -3106,6 +3189,7 @@ body {
     background-color: transparent;
   }
   .t-use__article_paired .t-use__illustration {
+    display: block;
     height: 90vw;
     background-color: transparent;
     -webkit-box-ordinal-group: 0;
@@ -3115,12 +3199,27 @@ body {
   }
   .t-use__article .t-use__text {
     width: 100%;
+    padding-bottom: 1rem;
+  }
+  .t-use__article .t-use__text small {
+    margin-top: 1.25rem;
+    margin-bottom: 2.25rem;
+  }
+  .t-use__article .t-use__text div {
+    margin-top: 2.25rem;
+  }
+  .t-use__article_paired .t-use__text {
+    padding-bottom: 0.375rem;
+  }
+  .t-use__article_paired .t-use__text div {
+    margin-top: 0.375rem;
+    margin-bottom: 0.75rem;
   }
   .t-video__container {
-    height: 22.8125rem;
+    height: 61.5vw;
   }
   .t-video__container .t-video__player {
-    height: 22.8125rem;
+    height: 61.5vw;
   }
   .t-main__video {
     padding-bottom: 1.5rem;
@@ -3144,30 +3243,34 @@ body {
         -ms-flex-pack: center;
             justify-content: center;
   }
+  [data-aos^=fade][data-aos^=fade].t-video__container {
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
+  }
+  [data-aos^=fade][data-aos^=fade].aos-animate.t-video__container {
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
+  }
 }
 
 @media only screen and (max-width: 475px) {
-  .t-header {
-    min-height: 50rem;
-  }
-  .t-header__cta span {
-    font-size: 2.5rem;
-  }
   .t-header__logo {
     position: absolute;
-    top: 7rem;
-    width: 10.625rem;
-    height: 3.125rem;
+    top: 6rem;
+    width: 11.5rem;
+    height: 3rem;
   }
   .t-header__logo_manufacturer {
-    width: 11rem;
+    width: 11.5rem;
     height: 5.5rem;
     -webkit-box-ordinal-group: 0;
     -webkit-order: -1;
         -ms-flex-order: -1;
             order: -1;
     position: relative;
-    top: -1rem;
+    top: -2rem;
   }
   .t-header__logo_manufacturer a {
     -webkit-box-align: center;
@@ -3176,12 +3279,20 @@ body {
             align-items: center;
     padding-bottom: 0;
   }
+  .t-header__sandwich {
+    margin: 0;
+  }
   .t-header__medicine {
     position: relative;
-    top: 1.75rem;
+    top: 0;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
-  .t-header__cta span {
-    padding-right: 4rem;
+  .t-medicine__inner {
+    width: 100%;
+    height: 70vw;
   }
   .t-header__cta a {
     margin-top: 2rem;
@@ -3199,6 +3310,9 @@ body {
   .t-video__container .t-video__player {
     height: 60.5vw;
   }
+  .t-video__descr {
+    padding-top: 0.75rem;
+  }
   [data-aos^=fade][data-aos^=fade].aos-animate.t-video__container {
     -webkit-transform: translate(0);
         -ms-transform: translate(0);
@@ -3209,6 +3323,20 @@ body {
 @media only screen and (max-width: 400px) {
   .t-menu__nav {
     padding-right: 6rem;
+  }
+  .t-header__presentation {
+    margin-top: 2vw;
+  }
+  .t-medicine__inner {
+    width: 100%;
+    height: 80vw;
+    margin: 0;
+  }
+  .t-video__container {
+    height: 58.5vw;
+  }
+  .t-video__container .t-video__player {
+    height: 58.5vw;
   }
 }
 
