--- a/trbstn/static/css/style.css
+++ b/trbstn/static/css/style.css
@@ -2980,6 +2980,12 @@ body {
   .t-header__medicine {
     margin-left: 2%;
   }
+  .t-header__logo_manufacturer a {
+    padding-bottom: 2.5rem;
+  }
+  .t-header__sandwich {
+    margin-top: 0;
+  }
   .t-header__cta span {
     font-size: 2.25rem;
   }
@@ -3115,7 +3121,7 @@ body {
     min-height: 55rem;
   }
   .t-header__presentation {
-    margin-top: 2rem;
+    margin-top: 4rem;
   }
   .t-medicine__inner {
     width: 27rem;
@@ -3132,13 +3138,10 @@ body {
     padding-right: 16px;
   }
   .t-header {
-    min-height: 55rem;
+    min-height: 53rem;
   }
   .t-main__decor {
     height: 100%;
-  }
-  .t-header__presentation {
-    margin-top: 0;
   }
   .t-header__medicine {
     -webkit-box-pack: center;
@@ -3164,9 +3167,22 @@ body {
   .t-header__cta span {
     font-size: 2.5rem;
     padding-right: 4rem;
+    text-shadow: 4px 4px 20px #000;
   }
   .t-header__cta a {
     margin-top: 2rem;
+  }
+  .t-menu__nav {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  .t-menu__nav::after {
+    display: none;
   }
   .t-main__use {
     padding: 2.5rem 0 1.5rem 0;
@@ -3280,6 +3296,7 @@ body {
     padding-bottom: 0;
   }
   .t-header__sandwich {
+    top: -2rem;
     margin: 0;
   }
   .t-header__medicine {
@@ -3296,13 +3313,6 @@ body {
   }
   .t-header__cta a {
     margin-top: 2rem;
-  }
-  .t-menu__nav {
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    padding-right: 0;
   }
   .t-video__container {
     height: 60.5vw;
@@ -3321,12 +3331,6 @@ body {
 }
 
 @media only screen and (max-width: 400px) {
-  .t-menu__nav {
-    padding-right: 6rem;
-  }
-  .t-header__presentation {
-    margin-top: 2vw;
-  }
   .t-medicine__inner {
     width: 100%;
     height: 80vw;
